--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,21 +68,12 @@ outputs = [
 
 [tool.pixi.tasks.mmm_file_type]
 args = ["mmm_library"]
-cmd = """echo {% if "meridian" in {{ mmm_library}}%}pkl{% else %}nc"""
+cmd = """echo {% if "meridian" in mmm_library %}pkl{% else %}nc{% endif %}"""
 
 [tool.pixi.tasks.fit_model]
-args = ["mmm_library", "preset_mame", { arg = "seed", default = "42"}]
-cmd = [
-    "python",
-    "mmm_param_recovery/fit_{{ mmm_library }}.py",
-    "--input",
-    "data/test_data/test_data_{{ preset_name}}_{{ seed }}.csv"
-    ]
-inputs = [
-    "data/test_data/test_data_{{ preset_name}}_{{ seed }}.csv",
-    "config/{{mmm_library}}.json"
-    ]
-outputs = [
-    "data/fits/{{ mmm_library }}_{{ preset_name }}_{{ seed }}.$(pixi task mmm_file_type {{ mmm_library }})"
-]
-
+args = ["mmm_library", "preset_name", { arg = "seed", default = "42"}]
+cmd = "python mmm_param_recovery/fit_{{ mmm_library }}.py --preset_name {{ preset_name }} --seed {{ seed }}"    
+inputs = ["data/test_data/test_data_{{ preset_name }}_{{ seed }}.csv"]
+# output broken for some reason.
+# outputs = ["data/fits/{{ mmm_library }}_{{ preset_name }}_{{ seed }}.$(pixi run mmm_file_type {{ mmm_library }})"]
+depends-on = [{ "task" = "make_test_data", "args" = ["{{ preset_name }}", "{{ seed }}"] }]
