--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,3 +114,45 @@ depends-on = [
     { "task" = "plot_memory_profile", "args" = ["pymc_marketing", "{{ preset_name }}", "{{ seed }}"] },
     { "task" = "plot_memory_profile", "args" = ["meridian", "{{ preset_name }}", "{{ seed }}"] }
     ]
+
+# This task evaluates both Meridian and PyMC-Marketing models for a given preset_name and seed.
+# It compares the performance of both libraries on the same synthetic dataset and saves evaluation results.
+# The task depends on both model fits being completed before running the evaluation, and will run
+# those fits if needed.
+[tool.pixi.tasks.evaluate_models]
+args = ["preset_name", { arg = "seed", default = "42"}]
+cmd = "python mmm_param_recovery/evaluation.py --preset_name {{ preset_name }} --seed {{ seed }} --model_type both --output_path data/results"
+inputs = [
+    "mmm_param_recovery/evaluation.py",
+    "data/test_data/ground_truth_{{ preset_name }}_{{ seed }}.nc",
+    "data/fits/meridian_{{ preset_name }}_{{ seed }}.pkl",
+    "data/fits/pymc_marketing_{{ preset_name }}_{{ seed }}.nc"
+]
+outputs = [
+    "data/results/results_{{ preset_name }}_{{ seed }}.nc"
+]
+depends-on = [
+    { "task" = "fit_model", "args" = ["meridian", "{{ preset_name }}", "{{ seed }}"] },
+    { "task" = "fit_model", "args" = ["pymc_marketing", "{{ preset_name }}", "{{ seed }}"] }
+]
+
+# This task runs the 'evaluate_models' task for a given preset_name and a list of seeds.
+# The 'seeds' argument should be a comma-separated string of integer seeds (e.g., "42,123,20250723").
+# The command splits the seeds string on commas and iterates over each seed, running the evaluation for each one.
+[tool.pixi.tasks.evaluate_multiple_seeds]
+args = ["preset_name", "seeds"]
+cmd = "for seed in $(echo {{ seeds }} | tr ',' ' '); do pixi run evaluate_models --preset_name {{ preset_name }} --seed $seed; done"
+
+# This task runs the complete evaluation pipeline across all four business presets with the given seeds.
+# It evaluates both Meridian and PyMC-Marketing models for small_business, growing_business, medium_business, and large_business.
+# The 'seeds' argument should be a comma-separated string of integer seeds (e.g., "42,123,20250723").
+# This is the main entry point for running comprehensive model comparisons across different business scenarios.
+[tool.pixi.tasks.evaluate_all_presets]
+args = ["seeds"]
+cmd = "echo 'Run model evaluation pipeline for all presets with seeds: {{ seeds }}'"
+depends-on = [
+    { "task" = "evaluate_multiple_seeds", "args" = ["small_business", "{{ seeds }}"] },
+    { "task" = "evaluate_multiple_seeds", "args" = ["growing_business", "{{ seeds }}"] },
+    { "task" = "evaluate_multiple_seeds", "args" = ["medium_business", "{{ seeds }}"] },
+    { "task" = "evaluate_multiple_seeds", "args" = ["large_business", "{{ seeds }}"] }
+]
