--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ memory_profiler = ">=0.61.0,<0.62"
 pymc = "==5.24.1"
 pymc-marketing = ">=0.15.1,<0.16"
 blackjax = ">=1.2.4,<2"
+great_tables = ">=0.18.0,<0.19"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
