--- a/cpu-environment.yaml
+++ b/cpu-environment.yaml
@@ -25,6 +25,7 @@ dependencies:
   - pymc-marketing>=0.15.1,<0.16
   - blackjax>=1.2.4,<2
   - great_tables>=0.18.0,<0.19
+  - rich>=13.0.0
   - pip
   - pip:
       - google-meridian>=1.1.6,<2
