--- a/cpu-environment.yaml
+++ b/cpu-environment.yaml
@@ -20,6 +20,8 @@ dependencies:
   - numpyro
   - nutpie
   - ipywidgets>=8.1.7,<9
+  - plotly >=6.3.0
+  - kaleido
   - memory_profiler>=0.61.0,<0.62
   - pymc==5.24.1
   - pymc-marketing>=0.15.1,<0.16
