--- a/cpu-environment.yaml
+++ b/cpu-environment.yaml
@@ -16,12 +16,11 @@ dependencies:
   - xarray
   - pympler
   - statsmodels
-  - jax
+  - jax>=0.4.0,<0.5.0
   - numpyro
   - nutpie
   - ipywidgets>=8.1.7,<9
   - plotly >=6.3.0
-  - kaleido
   - memory_profiler>=0.61.0,<0.62
   - pymc==5.24.1
   - pymc-marketing>=0.15.1,<0.16
@@ -31,3 +30,4 @@ dependencies:
   - pip
   - pip:
       - google-meridian>=1.1.6,<2
+      - kaleido
