--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ mmm-param-recovery = { path = ".", editable = true }
 [tool.pixi.dependencies]
 pytest = "*"
 ipykernel = "*"
+jax = ">0.4.0, <0.5.0"
 jupytext = "*"
 jupyterlab = "*"
 arviz = "*"
@@ -43,7 +44,6 @@ tensorflow-probability = "*"
 xarray = "*"
 pympler = "*"
 statsmodels = "*"
-jax = "*"
 numpyro = "*"
 nutpie = "*"
 ipywidgets = ">=8.1.7,<9"
